project-1/node-todo-cicd/canary/istio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: nodejs 
spec:
  selector:
    app: myapp
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
