project-1/node-todo-cicd/canary/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-deploy-svc
  namespace: nodejs 
spec:
  selector:
    app: stablemyapp
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
