project-1/node-todo-cicd/canary/ing-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-ing
  namespace: nodejs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "MYAPPSESSION"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  ingressClassName: nginx   # ✅ include this if required by your setup
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-deploy-svc
            port:
              number: 8000
