project-1/node-todo-cicd/canary/virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-svc
  namespace: nodejs
spec:
  hosts:
    - myapp.local
  http:
    - route:
        - destination:
            host: stablemyapp
            subset: stable
          weight: 90
        - destination:
            host: canarymyapp
            subset: canary
          weight: 10
